Fixed dynamic font not showing in the exported image

--- a/src/components/Background/Window/index.css
+++ b/src/components/Background/Window/index.css
@@ -30,7 +30,6 @@
 .title-text span {
   outline: none;
   white-space: nowrap;
-  text-overflow: ellipsis;
   overflow: hidden;
 }
 
